--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0rem 2rem;
     background-color: black;
     border-bottom: 1px solid gray;
     position: sticky;
@@ -12,7 +12,7 @@
   }
   
   .logo img {
-    height: 50px;
+    height: 100px;
     width: auto;
     transition: transform 0.3s ease;
   }
